Bug 91654 - Weston crashes since 954f183e2f9891b241c1efc0ea61ed56019a4326 on TTY switch with fbdev backend
Summary: Weston crashes since 954f183e2f9891b241c1efc0ea61ed56019a4326 on TTY switch w...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-16 03:34 UTC by nerdopolis1
Modified: 2015-08-22 03:01 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Crash dump of Weston's crash on tty switch with fbdev backend (10.06 KB, text/plain)
2015-08-16 03:34 UTC, nerdopolis1
Details

Description nerdopolis1 2015-08-16 03:34:33 UTC
Created attachment 117716 [details]
Crash dump of Weston's crash on tty switch with fbdev backend

Currently the fbdev backend crashes on a TTY switch. I'm finally able to report it now. Doing a manual-ish bisection it seems to be since commit 954f183e2f9891b241c1efc0ea61ed56019a4326 that this happens
Comment 1 Pekka Paalanen 2015-08-19 11:04:49 UTC
Patch on the list:
http://lists.freedesktop.org/archives/wayland-devel/2015-August/023967.html
Comment 2 Pekka Paalanen 2015-08-20 07:00:02 UTC
Fixed.

commit 3f897940d90c579a884b13c613440bc85aabda18
Author: Pekka Paalanen <pekka.paalanen@collabora.co.uk>
Date:   Wed Aug 19 13:52:47 2015 +0300

    compositor-fbdev: fix VT switching crash
Comment 3 nerdopolis1 2015-08-22 03:01:26 UTC
Thanks. This is indeed fixed now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.